--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,16 @@
     height: 100%;
     border-right: 0.2rem solid #ccc;
 }
+
+.Viewer .Pane {
+    border-bottom: 0.2rem solid #ccc;
+    padding: 0.5rem;
+}
+
+.Viewer .Code{
+    height: 80%;
+}
+
+.Error {
+    color: #FF0000;
+}
